[gd_scene load_steps=18 format=3 uid="uid://c4uo7b77jtx6g"]

[ext_resource type="Script" path="res://assets/general_scripts/gpPlayer.gd" id="1_mngvk"]
[ext_resource type="Texture2D" uid="uid://cun01jq5202w" path="res://assets/overworld_characters/PLAYER_walk.png" id="2_8nsvb"]
[ext_resource type="Resource" uid="uid://dga8fe3nbmpwq" path="res://assets/combatants_resources/cbPPrototypeA.tres" id="2_tmhx3"]
[ext_resource type="Resource" uid="uid://byeo878g637qe" path="res://assets/combatants_resources/cbPPrototypeB.tres" id="3_0jqxo"]
[ext_resource type="Texture2D" uid="uid://b42ljw6hu4i2h" path="res://assets/misc_sprites/interact.png" id="3_y84xx"]
[ext_resource type="PackedScene" uid="uid://cmyccltenbww6" path="res://assets/components/cmpCombatantSquad.tscn" id="6_ucs2i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b8rwl"]
size = Vector2(17, 22)

[sub_resource type="Animation" id="Animation_b30mo"]
resource_name = "Interact"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_rasdp"]
resource_name = "RESET"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_woxdh"]
_data = {
"Interact": SubResource("Animation_b30mo"),
"RESET": SubResource("Animation_rasdp")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8i7nm"]
height = 22.0

[sub_resource type="Animation" id="Animation_jaucr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerDirection:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_31icp"]
resource_name = "Walk_Down"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 1, 0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerDirection:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_6sc3m"]
resource_name = "Walk_Left"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerDirection:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ddvpw"]
resource_name = "Walk_Right"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerDirection:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.5708]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_dpwad"]
resource_name = "Walk_Up"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 7, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerDirection:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.14159]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sx3aq"]
_data = {
"RESET": SubResource("Animation_jaucr"),
"Walk_Down": SubResource("Animation_31icp"),
"Walk_Left": SubResource("Animation_6sc3m"),
"Walk_Right": SubResource("Animation_ddvpw"),
"Walk_Up": SubResource("Animation_dpwad")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 17
collision_mask = 17
script = ExtResource("1_mngvk")

[node name="CombatantSquadComponent" parent="." instance=ExtResource("6_ucs2i")]
COMBATANT_SQUAD = Array[Resource("res://assets/resources/ResCombatant.gd")]([ExtResource("2_tmhx3"), ExtResource("3_0jqxo")])

[node name="PlayerDirection" type="Marker2D" parent="."]
position = Vector2(0, -20)

[node name="InteractionDetector" type="Area2D" parent="PlayerDirection"]
collision_layer = 0
collision_mask = 2

[node name="InteractionColShape" type="CollisionShape2D" parent="PlayerDirection/InteractionDetector"]
position = Vector2(0.500001, 21)
shape = SubResource("RectangleShape2D_b8rwl")
debug_color = Color(0.917647, 0.996078, 0, 0.419608)

[node name="PlayerInteractionBubble" type="Sprite2D" parent="."]
visible = false
position = Vector2(1, -49)
scale = Vector2(0.546875, 0.476)
texture = ExtResource("3_y84xx")
hframes = 4
vframes = 2
frame = 4

[node name="BubbleAnimator" type="AnimationPlayer" parent="PlayerInteractionBubble"]
libraries = {
"": SubResource("AnimationLibrary_woxdh")
}

[node name="PlayerSprite" type="Sprite2D" parent="."]
position = Vector2(0, -20)
texture = ExtResource("2_8nsvb")
hframes = 3
vframes = 3
frame = 1

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_8i7nm")

[node name="PlayerAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sx3aq")
}

[node name="PlayerCamera" type="Camera2D" parent="."]
z_as_relative = false
zoom = Vector2(2, 2)
position_smoothing_enabled = true
position_smoothing_speed = 7.0
